# carp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  carp.h
examples/: carp_example.cc  full_ex.cc  terse.cc  terse_ex.cc  tuple_print.h
include/: carp.h
include/carp/: carp.h
tests/: test_carp.cc  tests_main.cc
